tests/fixtures/errors/e0501_driven_twice.mimz
// expect: E0501
module M {
  in a: bit
  out y: bit
  y = a
  y = a
}
